Fix message word wrapping

--- a/discode-web/src/app/home/message/message.component.scss
+++ b/discode-web/src/app/home/message/message.component.scss
@@ -127,5 +127,12 @@ li .menu-list {
 
 .message-content {
     max-width: 60vw;
-    word-wrap: break-word;
+
+    pre {
+        white-space: pre-wrap;       /* Since CSS 2.1 */
+        white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+        white-space: -pre-wrap;      /* Opera 4-6 */
+        white-space: -o-pre-wrap;    /* Opera 7 */
+        word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    }
 }
